# Django.oline_shop

./: .env.sample  .gitignore  README.md  blog_data.json  catalog_data.json  contacts_data.json  data.json  product_data.json  pyproject.toml
blog/: apps.py  models.py  signals.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
blog/templates/blog/includes/: inc_blog_detail.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0005_delete_contact.py  0006_version.py  0009_alter_product_options_product_status.py  0010_alter_product_category.py  0011_alter_product_preview.py
catalog/templates/catalog/: base.html  contacts.html  description.html  home.html  index.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templatetags/: media_tags.py
config/: settings.py  urls.py
contacts/: admin.py  models.py  urls.py  views.py
contacts/migrations/: 0001_initial.py
contacts/templates/contacts/: contact_list.html
users/: forms.py  models.py  sender.py  urls.py  views.py
users/management/commands/: add_managers_group.py  csu.py
users/templates/users/: change_password.html  login.html  profile.html
users/templates/users/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  registration_confirmed.html  registration_failed.html  registration_form.html  registration_sent_done.html
